--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,3 @@
-.wrapper {
-	margin-top: 60px;
-}
-
 body {
 	margin: 0;
 	padding: 0;
@@ -23,6 +19,17 @@ body {
 	text-align: center;
 	font-family: 'Montserrat', serif;
 	font-weight: 700;
+	margin: 0px;
+}
+
+#banner_landingpage h1 {
+    color: white;
+    font-family: 'Roboto', serif;
+    font-weight: 400;
+    margin: 0;
+    position: relative;
+    top: -50px;
+    text-align: center;
 }
 
 .container {
@@ -79,8 +86,6 @@ body {
 	font-size: 1.6rem;
 	margin: 50px 0;
 	position: relative;
-    width: max-content;
-    z-index: -1;
 }
 
 @media screen and (max-width: 550px) {
@@ -131,9 +136,16 @@ body {
 	background-color: #BB8CE2;
 }
 
+.title.center-border {
+	width: max-content;
+}
+
+.title.left-border {
+	width: 100%;
+}
+
 .full {
 	padding: 25px 0px 50px;
 	background-color: #F6F6F6;
-    z-index: -2;
     position: relative;
 }
